--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
   "name": "garment-erp-pwa",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "Garment ERP Production Management PWA with Nepali Language Support",
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^6.26.1",
+    "lucide-react": "^0.263.1",
+    "date-fns": "^2.30.0",
+    "recharts": "^2.8.0",
+    "react-hot-toast": "^2.4.1",
+    "workbox-webpack-plugin": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
+  },
+  "devDependencies": {
+    "@netlify/functions": "^2.4.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run build-sw",
+    "build-sw": "node scripts/build-sw.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "netlify-dev": "netlify dev"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
