--- a/package.json
+++ b/package.json
@@ -4,27 +4,29 @@
   "private": true,
   "description": "Garment ERP Production Management PWA with Nepali Language Support",
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.263.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.26.1",
-    "lucide-react": "^0.263.1",
-    "date-fns": "^2.30.0",
-    "recharts": "^2.8.0",
     "react-hot-toast": "^2.4.1",
-    "workbox-webpack-plugin": "^7.0.0",
+    "react-router-dom": "^6.26.1",
+    "recharts": "^2.8.0",
     "workbox-core": "^7.0.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "workbox-strategies": "^7.0.0",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
     "@netlify/functions": "^2.4.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
