--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "date-fns": "^2.30.0",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.263.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.8.0",
