--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,79 +11,27 @@
   "lang": "ne",
   "scope": "/",
   "categories": ["business", "productivity", "utilities"],
-  "screenshots": [
-    {
-      "src": "/screenshots/operator-dashboard.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "platform": "narrow",
-      "label": "Operator Dashboard - Mobile View"
-    },
-    {
-      "src": "/screenshots/supervisor-dashboard.png", 
-      "sizes": "1024x768",
-      "type": "image/png",
-      "platform": "wide",
-      "label": "Supervisor Dashboard - Tablet View"
-    }
-  ],
   "icons": [
     {
-      "src": "/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-96x96.png",
-      "sizes": "96x96", 
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-192x192.png",
+      "src": "/logo192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-512x512.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-maskable-192x192.png",
+      "src": "/logo192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icon-maskable-512x512.png",
+      "src": "/logo512.png",
       "sizes": "512x512", 
       "type": "image/png",
       "purpose": "maskable"
@@ -94,53 +42,25 @@
       "name": "ऑपरेटर ड्यासबोर्ड",
       "short_name": "ऑपरेटर",
       "description": "Operator dashboard for production work",
-      "url": "/operator",
-      "icons": [
-        {
-          "src": "/shortcut-operator.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "url": "/operator"
     },
     {
       "name": "सुपरभाइजर ड्यासबोर्ड", 
       "short_name": "सुपरभाइजर",
       "description": "Supervisor dashboard for line monitoring",
-      "url": "/supervisor",
-      "icons": [
-        {
-          "src": "/shortcut-supervisor.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "url": "/supervisor"
     },
     {
       "name": "काम पूरा गर्नुहोस्",
       "short_name": "काम पूरा",
       "description": "Complete current work assignment",
-      "url": "/operator?action=complete",
-      "icons": [
-        {
-          "src": "/shortcut-complete.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "url": "/operator?action=complete"
     },
     {
       "name": "गुणस्तर रिपोर्ट",
       "short_name": "गुणस्तर",
       "description": "Report quality issues",
-      "url": "/operator?action=quality",
-      "icons": [
-        {
-          "src": "/shortcut-quality.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "url": "/operator?action=quality"
     }
   ],
   "related_applications": [],
