--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^12.1.0",
     "lucide-react": "^0.263.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
@@ -69,7 +70,7 @@
   "homepage": ".",
   "keywords": [
     "garment",
-    "erp", 
+    "erp",
     "manufacturing",
     "nepal",
     "nepali",
