--- a/package.json
+++ b/package.json
@@ -1,59 +1,49 @@
 {
-  "name": "garment-erp-nepal",
+  "name": "garment-erp-pwa",
   "version": "1.0.0",
+  "description": "Garment ERP Production Management System with Nepali Language Support",
   "private": true,
-  "description": "गारमेन्ट ERP - उत्पादन व्यवस्थापन | Complete Garment Manufacturing ERP with Nepali Language Support",
+  "homepage": "./",
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "date-fns": "^2.30.0",
-    "firebase": "^12.1.0",
+    "@netlify/functions": "^2.8.2",
+    "firebase": "^10.14.1",
     "lucide-react": "^0.263.1",
-    "react": "^18.3.1",
-    "react-datepicker": "^8.7.0",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.26.1",
-    "recharts": "^2.8.0",
-    "workbox-core": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-webpack-plugin": "^7.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.3.2",
+    "workbox-webpack-plugin": "^6.5.4",
+    "workbox-window": "^6.5.4"
   },
   "devDependencies": {
-    "@netlify/functions": "^2.4.0",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.6"
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "postcss": "^8.5.6",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "react-scripts start",
     "build": "react-scripts build && npm run build-sw",
     "build-sw": "node scripts/build-sw.js",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "netlify-dev": "netlify dev",
-    "deploy": "netlify deploy --prod",
-    "deploy-preview": "netlify deploy",
-    "analyze": "npx analyze-bundle",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "postbuild": "echo 'Build completed successfully!'",
-    "prebuild": "echo 'Starting build process...'"
+    "deploy": "npm run build && netlify deploy --prod",
+    "dev": "netlify dev",
+    "lint": "eslint src --ext .js,.jsx",
+    "lint:fix": "eslint src --ext .js,.jsx --fix",
+    "format": "prettier --write src/**/*.{js,jsx,css,md}"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "rules": {
-      "no-unused-vars": "warn",
-      "no-console": "off"
-    }
+    ]
   },
   "browserslist": {
     "production": [
@@ -67,31 +57,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
-  "keywords": [
-    "garment",
-    "erp",
-    "manufacturing",
-    "nepal",
-    "nepali",
-    "production",
-    "management",
-    "pwa",
-    "react",
-    "firebase",
-    "textile",
-    "sewing",
-    "quality-control",
-    "real-time",
-    "multilingual"
-  ],
-  "author": {
-    "name": "Santosh Rijal",
-    "email": "santoshrijal41@gmail.com"
-  },
-  "license": "MIT",
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=16.0.0",
     "npm": ">=8.0.0"
   }
 }
