--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ REACT_APP_GOOGLE_SHEETS_API_KEY=your_google_api_key_here
 
 # Demo Mode
 REACT_APP_DEMO_MODE=false
+
+# API Configuration
+REACT_APP_API_URL=/api
