--- a/.env
+++ b/.env
@@ -20,3 +20,10 @@ REACT_APP_DEMO_MODE=false
 
 # API Configuration
 REACT_APP_API_URL=/api
+
+# Development Server Configuration
+WDS_SOCKET_HOST=localhost
+WDS_SOCKET_PORT=3000
+WDS_SOCKET_PATH=/ws
+CHOKIDAR_USEPOLLING=false
+FAST_REFRESH=true
