--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "homepage": "./",
   "dependencies": {
     "@netlify/functions": "^2.8.2",
+    "date-fns": "^4.1.0",
+    "es-toolkit": "^1.39.10",
     "firebase": "^10.14.1",
     "lucide-react": "^0.263.1",
+    "nepali-date-converter": "^3.4.0",
     "nepali-datepicker-reactjs": "^1.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "web-vitals": "^3.3.2",
     "workbox-webpack-plugin": "^6.5.4",
     "workbox-window": "^6.5.4"
