--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "netlify:deploy:prod": "netlify deploy --prod",
     "lint": "eslint src --ext .js,.jsx",
     "lint:fix": "eslint src --ext .js,.jsx --fix",
-    "format": "prettier --write src/**/*.{js,jsx,css,md}"
+    "format": "prettier --write src/**/*.{js,jsx,css,md}",
+    "init-firestore": "node initialize_firestore_data.js",
+    "clear-firestore": "node clear_firestore_data.js",
+    "reset-firestore": "npm run clear-firestore -- --force && npm run init-firestore",
+    "setup": "npm install && npm run init-firestore"
   },
   "eslintConfig": {
     "extends": [
