--- a/package.json
+++ b/package.json
@@ -44,6 +44,14 @@
     "netlify:dev": "netlify dev",
     "netlify:build": "netlify build",
     "netlify:deploy": "netlify deploy",
+    "build:dev": "REACT_APP_ENVIRONMENT=development npm run build",
+    "build:staging": "REACT_APP_ENVIRONMENT=staging npm run build",
+    "build:prod": "REACT_APP_ENVIRONMENT=production npm run build",
+    "deploy:dev": "npm run build:dev && netlify deploy --alias=dev",
+    "deploy:staging": "npm run build:staging && netlify deploy --alias=staging",
+    "deploy:prod": "npm run build:prod && netlify deploy --prod",
+    "preview": "npx serve -s build -l 3000",
+    "lint": "eslint src --ext .js,.jsx --fix",
     "netlify:deploy:prod": "netlify deploy --prod",
     "lint": "eslint src --ext .js,.jsx",
     "lint:fix": "eslint src --ext .js,.jsx --fix",
