--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nepali-date-converter": "^3.4.0",
     "nepali-datepicker-reactjs": "^1.1.9",
     "react": "^18.2.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
@@ -51,9 +52,8 @@
     "deploy:staging": "npm run build:staging && netlify deploy --alias=staging",
     "deploy:prod": "npm run build:prod && netlify deploy --prod",
     "preview": "npx serve -s build -l 3000",
-    "lint": "eslint src --ext .js,.jsx --fix",
-    "netlify:deploy:prod": "netlify deploy --prod",
     "lint": "eslint src --ext .js,.jsx",
+    "netlify:deploy:prod": "netlify deploy --prod",
     "lint:fix": "eslint src --ext .js,.jsx --fix",
     "format": "prettier --write src/**/*.{js,jsx,css,md}",
     "init-firestore": "node initialize_firestore_data.js",
