--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "recharts": "^3.1.2",
     "web-vitals": "^3.3.2",
     "workbox-webpack-plugin": "^6.5.4",
-    "workbox-window": "^6.5.4"
+    "workbox-window": "^6.5.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
