error not solved .toward solving

--- a/.env
+++ b/.env
@@ -26,4 +26,6 @@ WDS_SOCKET_HOST=localhost
 WDS_SOCKET_PORT=3000
 WDS_SOCKET_PATH=/ws
 CHOKIDAR_USEPOLLING=false
-FAST_REFRESH=true
+FAST_REFRESH=false
+WATCHPACK_POLLING=false
+CI=false
