dashboard but had look hook erooro

--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ WDS_SOCKET_HOST=localhost
 WDS_SOCKET_PORT=3000
 WDS_SOCKET_PATH=/ws
 CHOKIDAR_USEPOLLING=false
-FAST_REFRESH=false
+FAST_REFRESH=true
 WATCHPACK_POLLING=false
 CI=false
