--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "workbox-webpack-plugin": "^6.5.4",
     "workbox-window": "^6.5.4",
     "zustand": "^5.0.8"
